--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ol>
-        <li><a href="./recipes/julienne.html" target="_blank">Chicken and Mushroom Julienne</a></li>
-        <li><a href="./recipes/gyro.html" target="_blank">Chicken Gyro</a></li>
-        <li><a href="./recipes/pasta.html" target="_blank">Penne with shrimps</a></li>
+        <li><a href="./recipes/julienne.html" target="_blank">Chicken and Mushroom Julienne</a>
+        <img class="julienne" src="./images/Julienne_main.jpeg" alt="Julienne" width="70" height="auto">
+        </li>
+        <li><a href="./recipes/gyro.html" target="_blank">Chicken Gyro</a>
+        <img class="gyro" src="./images/Chicken-Gyro.jpeg" alt="Gyro" width="70" height="auto"></li>
+        <li><a href="./recipes/pasta.html" target="_blank">Penne with shrimps</a>
+        <img class="shrims" src="./images/Rasta-Pasta.jpeg" alt="Gyro" width="70" height="auto"></li></li>
     </ol>
     
     
